promote large integer types to hex strings

--- a/README.Rmd
+++ b/README.Rmd
@@ -137,13 +137,13 @@ con <- file(jpeg_file, 'rb') |>
 # Read the first 2 bytes as HEX
 # For JPEG files, this should be the "Start of Image (SOI)" marker "ffd8"
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-soi <- read_hex(con, 2) 
+soi <- read_hex(con, n = 1, size = 2) 
 stopifnot(soi == 'ffd8')
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # Next marker should be start of JFIF.  Marker hex = 'ffe0'
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-marker <- read_hex(con, 2)
+marker <- read_hex(con, n = 1, size = 2)
 stopifnot(marker == 'ffe0')
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -162,11 +162,9 @@ stopifnot(marker == 'ffe0')
 list(
   length   = read_uint16(con),
   jfif     = read_str(con),
-  major    = read_uint8(con),
-  minor    = read_uint8(con),
-  density  = read_uint8(con),
-  xdensity = read_uint16(con),
-  ydensity = read_uint16(con)
+  version  = read_uint8(con, 2),
+  units    = c('', 'PPI', 'PPcm')[read_uint8(con) + 1],
+  density = read_uint16(con, 2)
 )
 ```
 
