--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ Key features:
 * Support for integer types which contain values outside the range of
   R's integer type
 * Support for 16-bit floating point numbers.
-* Persistant information is stored on the connection for how to handle:
+* Persistent information is stored on the connection for how to handle:
     * Endianness
     * Bounds checking
     * EOF behaviour
@@ -71,6 +71,11 @@ Key features:
 * Raw bytes       
     * `read_raw()`, `write_raw()` Read/write raw bytes
     * `read_hex()`, `write_hex()` Read/write bytes as hex strings
+* Data layout operations
+    * `flip_endian()` reverse the elements within blocks within a vector. Used
+      for changing *endianness* of data in a vector.
+    * `aperm_array_to_vector()` and `aperm_vector_to_array()` are wrappers around
+      `aperm()` to allow for easier import/export of array data.
 * Connection configuration
     * Set persistent configuration operations on the connection so that they 
       do not need to be re-specified for every read/write operation i.e.
