--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,17 @@ knitr::opts_chunk$set(
 )
 
 library(ctypesio)
+
+if (FALSE) {
+  # Check for functions which do not have an @examples block for roxygen
+  system("grep -c examples man/*Rd", intern = TRUE) |> 
+    grep(":0$", x = _, value = TRUE)
+}
+
+
+if (FALSE) {
+  covr::report()
+}
 ```
 
 # ctypesio
